--- a/src/pages/login/login.page.html
+++ b/src/pages/login/login.page.html
@@ -2,17 +2,17 @@
   <div class='loginContainer'>
     <img src='assets/transparentLogo.png' class='loginLogoDisplay' />
     <div class='loginLogoTitle'>Evergrow</div>
-    <div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <ion-item>
-        <ion-input placeholder="Email" type="email"></ion-input>
+        <ion-input placeholder="Username" formControlName='username'></ion-input>
       </ion-item>
       <br />
       <ion-item>
-        <ion-input placeholder="Password" type="password"></ion-input>
+        <ion-input placeholder="Password" formControlName='password' type="password"></ion-input>
       </ion-item>
       <br />
       <div class="loginButtonContainer">
-        <ion-button (click)="handleLogin()" color="primary" class="loginButton">Login</ion-button>
+        <ion-button color="primary" class="loginButton" [disabled]="loading" type='submit'>Login</ion-button>
       </div>
       <div class="registerButtonContainer">
         <span>Don't have an account?</span>
@@ -20,6 +20,6 @@
         <span>Press to <span style="font-weight: 500; color: var(--ion-color-primary)"
             (click)="handleOpenRegisterPage()">Register</span></span>
       </div>
-    </div>
+    </form>
   </div>
 </ion-content>
